feat: UI fixes, security hardening, home page routing
- Footer & page containers updated to 1200px max-width
- Cart apply button styled with gradient + visible dropdown arrow
- Edit button pre-fills modal with previous selections (Update Cart mode)
- Cookie consent modal made compact (horizontal buttons, smaller)
- Cart drawer cd-item consistency between shop.js and app.js
- Removed old checkout-progress from confirmation page (uses ck-progress)
- Form data persists across page refresh via sessionStorage
- WhatsApp overlay repositioned on dashboard to avoid settings button
- index.html → redirect, homepage content moved to home.html
- Added 404.html, Supabase email templates
- Security: removed SQL dumps, setup docs, .env.example from tracking
- Security: added HSTS, X-XSS-Protection, Permissions-Policy, DNS prefetch headers
- Cleaned up leftover dev files (_dash_v6.css, _new_dash.css, etc.)

--- a/.gitignore
+++ b/.gitignore
@@ -29,13 +29,30 @@ build/
 *.key
 .vercel
 
-# Documentation containing API keys / secrets
+# Documentation containing API keys / secrets / setup instructions
 SERVICES_SETUP.md
 EDGE_FUNCTION_DEPLOY.md
 EMAIL_NOTIFICATIONS_SETUP.md
 GOOGLE_LOGIN_SETUP.md
+DEPLOYMENT.md
+ROLE_PERMISSIONS.md
+
+# Database schema / SQL dumps
+*.sql
+supabase/order_email_trigger.sql
+
+# Environment examples
+.env.example
 
 # Supabase local temp files
 supabase/.temp/
 supabase/config.toml
 nul
+
+# Local dev server config
+serve.json
+serve_output.txt
+
+# Build / migration helpers
+_*.css
+_*.js
